--- a/src/components/Calculator/DefaultCalculator/InfoTable/InfoTable.module.scss
+++ b/src/components/Calculator/DefaultCalculator/InfoTable/InfoTable.module.scss
@@ -46,6 +46,16 @@
   }
 }
 
+.pulseLoader {
+  position: absolute;
+  border-color: red;
+  align-self: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+}
+
 .infoTableTooltip {
   hr{
     border: none;
