--- a/src/components/Calculator/DefaultCalculator/ErrorNotification/ErrorNotification.module.scss
+++ b/src/components/Calculator/DefaultCalculator/ErrorNotification/ErrorNotification.module.scss
@@ -6,11 +6,11 @@
   transform: translate(-50%,-50%);
   width: 400px;
   height: 200px;
-  border: 4px solid rgb(96, 67, 47);
+  border: 4px solid var(--color-table-text);
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(235, 198, 159);
+  background-color: var(--background-color-table);
 
   button {
     right: 10px;
@@ -18,7 +18,7 @@
   }
 
   div {
-    border: 2px solid rgb(96, 67, 47);
+    border: 2px solid var(--color-table-text);
     width: 392px;
     height: 192px;
     display: flex;
@@ -28,7 +28,7 @@
     p{
       font-size: 24px;
       font-weight: 600;
-      color: rgb(96, 67, 47);
+      color: var(--color-table-text);
     }
   }
 
