--- a/src/components/Calculator/GameModeCalculator/MarketMenu/MarketMenuItemList/MarketMenuItemList.module.scss
+++ b/src/components/Calculator/GameModeCalculator/MarketMenu/MarketMenuItemList/MarketMenuItemList.module.scss
@@ -8,5 +8,34 @@
   flex-wrap: wrap;
   z-index: 9997;
   margin: 10px;
+}
 
+.materials:empty {
+  content: 'Рюкзак пуст.';
+  position: absolute;
+  width: 200px;
+  height: 80px;
+  border:4px solid rgb(143,111,84);
+  top: 45%;
+  left: 45%;
+  transform: translate(-50%, -50%);
+}
+
+.materials:empty:after {
+  content: attr(data-notification);
+  border: 1px solid rgb(143,111,84);
+  position: absolute;
+  width: 195px;
+  height: 75px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  color: rgb(91,64,45);
+  font-size: 20px;
+  font-weight: 700;
 }
