--- a/src/components/transportation/TransportationList/TransportationTable.module.scss
+++ b/src/components/transportation/TransportationList/TransportationTable.module.scss
@@ -1,6 +1,8 @@
 .tableStyles {
-  color: rgb(96, 67, 47);
+  color: var(--color-table-text);
   font-weight: 700;
+
+  transition: 1s ease color;
 
   .errorStyles {
     font-size: 24px;
@@ -14,8 +16,9 @@
     margin: 115px auto 5rem auto;
     white-space: normal;
     border-collapse: collapse;
-    background-color: rgb(235, 198, 159);
+    background-color: var(--background-color-table);
     filter: drop-shadow(5px 5px 6px black);
+    transition: 1s ease background-color;
 
     svg {
       width: 15px;
