--- a/src/components/Calculator/DefaultCalculator/InfoTable/InfoTable.module.scss
+++ b/src/components/Calculator/DefaultCalculator/InfoTable/InfoTable.module.scss
@@ -23,7 +23,6 @@
     white-space: normal;
     border-collapse: collapse;
     background-color: var(--background-color-table);
-    border: 2px solid #f6f5f1;
     text-align: center;
     overflow: auto;
 
@@ -35,15 +34,30 @@
       filter: drop-shadow(5px 5px 6px black);
     }
     td{
-      padding: 5px;
-      border: 2px solid #f6f5f1;
+      border: 2px solid white;
       cursor: pointer;
+      transition: 1s ease border;
+
+      div {
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      div:first-child {
+        border-bottom: 1px solid white;
+        background-color: var(--background-color-first-tr);
+        transition: 1s ease background-color, 1s ease border-bottom-color;
+      }
     }
     thead{
       th{
         padding: 8px;
-        border: 2px solid #f6f5f1;
+        border: 2px solid white;
         max-width: 100px;
+
+        transition: 1s ease border;
       }
     }
   }
