--- a/src/components/Theme/Theme.module.scss
+++ b/src/components/Theme/Theme.module.scss
@@ -19,6 +19,7 @@
   --top: 4px;
   --left: 23px;
   --scale: scale(0.3);
+  --background-color-first-tr: rgb(58,58,58);
 
   --background-color-table: rgb(103,95,90);
   --color-table-text: white;
@@ -38,6 +39,7 @@
   --top: 8px;
   --left: 13px;
   --scale: scale(1);
+  --background-color-first-tr: rgb(231, 176, 127);
 
   --background-color-table: rgb(235, 198, 159);
   --color-table-text: rgb(96, 67, 47);
