--- a/src/components/transportation/TransportationForm/TransportationForm.module.scss
+++ b/src/components/transportation/TransportationForm/TransportationForm.module.scss
@@ -1,6 +1,6 @@
 .transportationFormStyles {
   width: 318px;
-  position: absolute;
+  position: fixed;
   top: 110px;
   left: 30px;
   display: flex;
