--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,11 +1,14 @@
 .wrapper {
   width: 100%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 
   .sectionWrapper {
     display: flex;
     width: 100%;
     height: calc(100% - 30px);
+
     .sectionBox {
       z-index: 1;
       position: relative;
@@ -76,6 +79,7 @@
   }
 
   footer {
+    min-width: 660px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -89,8 +93,8 @@
         padding: 0 10px;
         color: white;
         cursor: pointer;
-        height: 100%;
         text-transform: uppercase;
+        height: 100%;
       }
 
       ul {
@@ -99,10 +103,11 @@
         flex-direction: column;
         color: white;
         background-color: #1a1a1a;
-        position: absolute;
+        position: fixed;
         width: 90px;
-        bottom: 20px;
+        bottom: 25px;
         padding: 10px;
+
       }
 
       li {
@@ -129,9 +134,13 @@
   }
 }
 
-
 @media (max-width: 1050px) and (orientation: portrait) {
   .wrapper {
+
+    footer {
+      min-width: unset;
+    }
+
     .sectionWrapper {
       flex-direction: column;
 
