--- a/src/components/Calculator/GameModeCalculator/GMCraftingForm/CalculatorForm/ReturnRateInput/ReturnRateInput.module.scss
+++ b/src/components/Calculator/GameModeCalculator/GMCraftingForm/CalculatorForm/ReturnRateInput/ReturnRateInput.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   margin: 7px 10px;
   align-items: center;
+  width: 380px;
 
   .resourceLabel{
     width: 110px;
@@ -24,10 +25,29 @@
     border: none;
     padding-top: 4px;
     padding-bottom: 2px;
-    width: auto;
-
+    color: var(--color-return-input);
+    font-weight: 700;
   }
   input[type='number']::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
     -webkit-appearance: none;
   }
+
+  .notification:after{
+    content: var(--content-notification);
+    color: red;
+    font-weight: 700;
+  }
+
+}
+
+
+
+[data-isinputvalid='valid'] {
+  --color-return-input: rgb(89, 60, 40);
+  --content-notification: '';
+}
+
+[data-isinputvalid='nonValid'] {
+  --color-return-input: red;
+  --content-notification: ' 15,2% - 70%';
 }
