--- a/src/components/Calculator/CalculatorTypeButtons/CalculatorTypeButtons.module.scss
+++ b/src/components/Calculator/CalculatorTypeButtons/CalculatorTypeButtons.module.scss
@@ -26,7 +26,7 @@
   .GMToggleButton{
     cursor: pointer;
 
-    .gameModeOffImg{
+    .gameModeOff{
       font-size: 28px;
 
       font-family: "Pirata One", system-ui;
@@ -53,7 +53,7 @@
       font-weight: 700;
       position: absolute;
       top: 67px;
-      left: -15px;
+      right: 10px;
       font-size: 17px;
       transition: 0.4s ease color;
     }
