--- a/src/components/Theme/Theme.module.scss
+++ b/src/components/Theme/Theme.module.scss
@@ -29,6 +29,7 @@
   --isChecked-color: red;
 
   --color-svg: white;
+  --game-mode-button-color: white;
 }
 
 [data-theme="light"] {
@@ -50,4 +51,5 @@
   --border-artefacts: none;
   --isChecked-color: lightgreen;
   --color-svg: black;
+  --game-mode-button-color: black;
 }
