--- a/src/components/Calculator/DefaultCalculator/CalculatorForm/Selectors/ConsumableSelector/ConsumablesSelector.module.scss
+++ b/src/components/Calculator/DefaultCalculator/CalculatorForm/Selectors/ConsumableSelector/ConsumablesSelector.module.scss
@@ -43,6 +43,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 0;
+    cursor: pointer;
     p{
       color: white;
       font-size: 10px;
