--- a/src/components/Calculator/DefaultCalculator/CalculatorForm/Selectors/ItemTierSelector/ItemTierSelector.module.scss
+++ b/src/components/Calculator/DefaultCalculator/CalculatorForm/Selectors/ItemTierSelector/ItemTierSelector.module.scss
@@ -9,6 +9,7 @@
   .itemTierSelector{
     display: flex;
     z-index: 9999;
+    position: relative;
 
     .itemTierButtonSelector{
       position: absolute;
